iptables/ip6tables.up.rules
# Generated by ip6tables-save v1.8.4 on Thu Nov 19 20:54:57 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Thu Nov 19 20:54:57 2020
# Generated by ip6tables-save v1.8.4 on Thu Nov 19 20:56:25 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -s ::1/128 -j REJECT

# Allow ICMP
-A INPUT -p icmpv6 -j ACCEPT

# Allow HTTP and HTTPS connections from anywhere
# (the normal ports for web servers).
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 443 -j ACCEPT

-A INPUT -p tcp --dport 2222 -j ACCEPT
# Allow inbound traffic from established connections.
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT

# Cloudflare
-A INPUT -p tcp -m multiport --dports http,https -s 2400:cb00::/32 -j ACCEPT
-A INPUT -p tcp -m multiport --dports http,https -s 2606:4700::/32 -j ACCEPT
-A INPUT -p tcp -m multiport --dports http,https -s 2803:f800::/32 -j ACCEPT
-A INPUT -p tcp -m multiport --dports http,https -s 2405:b500::/32 -j ACCEPT
-A INPUT -p tcp -m multiport --dports http,https -s 2405:8100::/32 -j ACCEPT
-A INPUT -p tcp -m multiport --dports http,https -s 2a06:98c0::/29 -j ACCEPT
-A INPUT -p tcp -m multiport --dports http,https -s 2c0f:f248::/32 -j ACCEPT

# Log what was incoming but denied (optional but useful).
-A INPUT -m limit --limit 5/min -j LOG --log-prefix "ip6tables_INPUT_denied: " --log-level 7

# Reject all other inbound.
#-A INPUT -j REJECT

# Log any traffic that was sent to you
# for forwarding (optional but useful).
#-A FORWARD -m limit --limit 5/min -j LOG --log-prefix "ip6tables_FORWARD_denied: " --log-level 7

# Reject all traffic forwarding.
#-A FORWARD -j REJECT

COMMIT
# Completed on Thu Nov 19 20:56:25 2020
